在Controller中检查subject的权限

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,5 +17,11 @@ post: /
     <input type="submit">
 </form>
 <hr>
+
+get: /api/anon
+<form action="/api/anon" method="get">
+    <input type="submit">
+</form>
+<hr>
 </body>
 </html>
